# estoque-api

./: .gitignore  README.md  pyproject.toml
produto/: models.py  serializers.py  urls.py  views.py
produto/migrations/: 0001_initial.py
produto/tests/: test_api_produtos.py  test_produto_serializer.py
setup/: settings.py  urls.py
